2009-10-24  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/apps-menu.jl: added a missing bracket

	* scripts/Makefile.in
	* scripts/sawfish-about.jl.in: switched from custom about-dialog to GtkAboutDialog

	* debian/*: added debian packaging scripts based on the official ones

2009-10-24  Teika kazura <teika@lavabit.com>
	* lisp/sawfish/wm/user.jl
	* man/news.texi: minor news & comment fix.

2009-10-22  Teika kazura <teika@lavabit.com>
	* OPTIONS
	* man/sawfish.texi
	* lisp/sawfish/wm/viewport.jl: Docstring improvement for 'scroll-viewport-steps'

	* OPTIONS
	* lisp/sawfish/wm/ext/apps-menu.jl
	* man/sawfish.texi: Doc improvements on applications menu.

2009-10-19  Teika kazura <teika@lavabit.com>
	* OPTIONS
	* lisp/sawfish/wm/ext/apps-menu.jl
	* man/news.texi
	* man/sawfish.texi: Completed doc updates for applications menu.

	* lisp/sawfish/wm/commands/grow-pack.jl
	* man/sawfish.texi: grow-pack doc upgrade.

2009-10-17  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/apps-menu.jl: removed dupped Development Category from Developmentmenu
	                                    added Editors Category to Developmentmenu
	                                    make use of global `xterm-prgoram' instead of local `my-term-string'

	* OPTIONS: updated for Teikas changes

	* lisp/sawfish/wm/menus.jl: updated "Reload Appsmenu" entry to call new `update-apps-menu' instead of `update-saw-menu'

	* man/sawfish.texi: added docs for several functions and variables:
				- grow-window-up
				- grow-window-down
				- grow-window-left
				- grow-window-right
				- shrink-window-up
				- shrink-window-down
				- shrink-window-left
				- shrink-window-right
				- pack-window-up
				- pack-window-down
				- pack-window-left
				- pack-window-right
				- yank-window-up
				- yank-window-down
				- yank-window-left
				- yank-window-right
				- grow-is-maximize
				- pack-warp-pointer
				- grow-pack-bump-obscured
				- grow-pack-bump-other-depth