@@ -28,17 +28,30 @@
 ;; magic comment to get an alias installed
 ;; (define-structure-alias sawfish-defaults sawfish.wm.defaults)
 
+(unless batch-mode
+
 ;; if it looks like GNOME is the desktop environment, then load the
 ;; extra GNOME integration module
-(unless batch-mode
   (if (getenv "GNOME_DESKTOP_SESSION_ID")
-      (require 'sawfish.wm.integration.gnome)))
+      (require 'sawfish.wm.integration.gnome)
 
 ;; if it looks like KDE is the desktop environment, then load the
 ;; extra KDE integration module
-(unless batch-mode
   (if (getenv "KDE_SESSION_VERSION")
-      (require 'sawfish.wm.integration.kde)))
+      (require 'sawfish.wm.integration.kde)
+
+;; if neither GNOME nor KDE is running, append standard
+;; reboot and shutdown actions to the session submenu
+
+;; read README.IMPORTANT if you don't know how to make
+;; non-root users able to use `shutdown'
+  (let ((menu (assoc (_ "Sessi_on") root-menu)))
+    (when menu
+      (nconc menu `(()
+                    (,(_ "_Reboot System")
+                     (system "sudo shutdown -r now &"))
+                    (,(_ "_Shutdown System")
+                     (system "sudo shutdown -h now &")))))))))
 
 ;; save errors to aid debugging
 (require 'sawfish.wm.ext.error-handler)
