@@ -1,3 +1,8 @@
+2009-10-26  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/defaults.jl: added reboot/shutdown menu entries for non GNOME/KDE users
+
+	* README.IMPORTANT: provide instructions for how to let normal users use `shutdown'
+
 2009-10-24  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/ext/apps-menu.jl: added a missing bracket
 
